2016-01-02  Jim Fowler  <jrf@Biblion>

	* Tools/journals: made JournalEntry to main window
	rather than JournalSearch

	* Tools/bookentry/journalFile.py (JournalFile): Created

	* Data/Ajb/ajb44_books.txt: finished proofreading

2016-01-01  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/journalMenus.py: added basic menus
	to journals. Removed menus from ui_JournalSearch.ui.

	* Tools/bookentry/journalWin.py (JournalSearch): Added basic
	functions, mostly copied from mainWindow.py.

2015-12-31  James Fowler  <jrf12@James-Fowlers-MacBook-Pro.local>

	* Tools/bookentry/journalWin.py: Start work on main journal
	window. Defined operations as a first pass

2015-11-08  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBentry.py (AJBentry.read_XML_to_Entry): Added
	read XML functions for entry class

2015-10-31  Jim Fowler  <jrf@Biblion>

	* Data/Ajb/ajb45_books.txt: Finished proofreading ajb45_books.txt

2015-10-25  Jim Fowler  <jrf@Biblion>

	* Tools/doc/theory.rst: got a lot of the theory document
	written today.

	* Tools/bookentry/xml/journalfile.xsd: Added multiple comments
	for a journal. Previous version only allowed one long comment.

2015-10-24  Jim Fowler  <jrf@Biblion>

	* Tools/journals:
	* Tools/bookentry/designer/ui_JournalSearch.ui:
	* Tools/bookentry/designer/ui_JournalEntry.ui: wrote initial
	designer for Journal entry tool.

2015-10-18  Jim Fowler  <jrf@Biblion>

	* Tools/setup.py: added validateXML to scripts list.

	* Tools/validateXML: wrote first version. Tested against existing
	schemas and testfiles.  Modified schemas and testfiles as
	necessary.

2015-10-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/JournalFile_test.xml: Created test file
	for journalfile.xsd.  Validated both .xsd and .xml file.

	* Tools/bookentry/xml/journalfile.xsd: Started journal file
	description.

	* Data/Ajb/ajb45_books.txt: finished AJB 45 today.

2015-10-04  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added minus superscript.
